tests/errors/type_check/place_typing/place_field_on_enum.sim

        enum E { A: i64 }
        fn f(e: E) {
            a: i64;
            entry:
            a = copy e.x;
            return
        }
        