tests/errors/type_check/place_typing/place_field_on_enum.err.expected
error: at 6:13: [TC-FieldOfNonStruct] In function 'f', block 'entry': Cannot project field 'x' of enum type 'E'
   |
 6 |             a = copy e.x;
   |             ^^^^^^^^^^^^
